* New IGB Browser link on Data Tracks view to launch IGB browser (dnix)
* Submission of Fragment Analysis request works.  (bspiglejr)
* Submission of Mitochondrial Sequencing request works.  (bspiglejr)
* Submission of Cherry Picking request works.  (bspiglejr)
* Users can now upload purchase order forms for Billing Accounts. (tcourdy)

5.4.4.1 (May 21, 2012)
----------------------
* Change style of Alert (message box). (tdisera)
* Added more rigorous back-end checking for duplicate Lab names. (tdisera/tcourdy)
* Fixed actionscript error in navUsersView that occurred when the datagrid was trying to be refreshed after a pre-existing lab was being saved. (tcourdy)
* Add new backend command for Plate Editor (GetPendingSampleList).  (tdisera)
* More work on nav bar for Super Admin to stay within 1024 width. (tdisera)



5.4.4 (May 18, 2012)
---------------------
* Add PlateType dictionary and codePlateType to Plate -- default to REACTION plate.  (bspigeljr)
* Add plate name and sample drop off location to Capillary Sequencing request submission scrrens. (bspiglejr)
* Group Samples on Capillary Sequencing request submission by plate if chose plate type.  (bspiglejr)
* Added changes for Topics feature.  (rcundick)
* Fixed a bug that was causing the Institutions dropdown on the labView to not refresh properly. (tcourdy)
* Worked on Super Admin state so that both DNA Seq Core links as well as all admin links are present. (tdisera)
* Fixed problem with Data Track link when datatracks_supported property not present or set to 'N' (tdisera)
* Added data track link to home page (tdisera)
* Changed billing plug-in code to correctly handle Illumina target enrichment charges as price per capture, not per sample (tdisera)
* Fixed bug that caused error when trying to delete experiment, analysis, or data track with collaborators.  Fixed by added explicit deletes to backend delete commands. (tdisera)