@@ -20,6 +20,8 @@
 * Submission of Mitochondrial Sequencing request works.  (bspiglejr)
 * Submission of Cherry Picking request works.  (bspiglejr)
 * Users can now upload purchase order forms for Billing Accounts. (tcourdy)
+* Fixed bug that caused error when trying to link an analysis file to a data track.  Problem caused by not considering fully qualified file path when hashing file. (tdisera)
+* Fixed Register files to bypass delete on Analysis files not present on file system when entry has comments or is linked to at least one data track. (tdisera)
 
 5.4.4.1 (May 21, 2012)
 ----------------------
